[project]
name = "pylarnitech"
version = "0.1.5"
description = "Python client library for Larnitech smart home controllers"
readme = "README.md"
authors = [
    { name = "Pavlo Klivak", email = "parkeex@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["larnitech", "smart-home", "home-automation", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/parkee/pylarnitech"
Repository = "https://github.com/parkee/pylarnitech"
Issues = "https://github.com/parkee/pylarnitech/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pylarnitech"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aioresponses>=0.7",
    "ruff>=0.4",
]
